@@ -23,7 +23,6 @@ import android.content.ComponentName;
 import android.content.Context;
 import android.content.Intent;
 import android.content.IntentFilter;
-import android.media.AudioDeviceInfo;
 import android.media.AudioManager;
 import android.media.MediaRoute2Info;
 import android.media.MediaRoute2ProviderInfo;
@@ -39,7 +38,6 @@ import android.text.TextUtils;
 import android.util.Log;
 import android.util.Slog;
 
-import com.android.internal.R;
 import com.android.internal.annotations.GuardedBy;
 import com.android.media.flags.Flags;
 
@@ -61,8 +59,6 @@ class SystemMediaRoute2Provider extends MediaRoute2Provider {
             SystemMediaRoute2Provider.class.getPackage().getName(),
             SystemMediaRoute2Provider.class.getName());
 
-    private static final int MAX_BROADCAST_DEVICE_SUPPORTED = 2;
-
     static final String SYSTEM_SESSION_ID = "SYSTEM_SESSION";
 
     private final AudioManager mAudioManager;
@@ -73,7 +69,7 @@ class SystemMediaRoute2Provider extends MediaRoute2Provider {
     private final DeviceRouteController mDeviceRouteController;
     private final BluetoothRouteController mBluetoothRouteController;
 
-    private final List<String> mSelectedRouteId = new ArrayList<>();
+    private String mSelectedRouteId;
     // For apps without MODIFYING_AUDIO_ROUTING permission.
     // This should be the currently selected route.
     MediaRoute2Info mDefaultRoute;
@@ -185,7 +181,7 @@ class SystemMediaRoute2Provider extends MediaRoute2Provider {
         }
 
         if (!Flags.enableBuiltInSpeakerRouteSuitabilityStatuses()) {
-            if (mSelectedRouteId.contains(routeOriginalId)) {
+            if (TextUtils.equals(routeOriginalId, mSelectedRouteId)) {
                 RoutingSessionInfo currentSessionInfo;
                 synchronized (mLock) {
                     currentSessionInfo =
@@ -240,25 +236,12 @@ class SystemMediaRoute2Provider extends MediaRoute2Provider {
 
     @Override
     public void selectRoute(long requestId, String sessionId, String routeId) {
-        if (Flags.enableOutputSwitcherPersonalAudioSharing()) {
-            // Pass params to DeviceRouteController to start the broadcast
-            mDeviceRouteController.selectRoute(routeId);
-        }
+        // Do nothing since we don't support multiple BT yet.
     }
 
     @Override
     public void deselectRoute(long requestId, String sessionId, String routeId) {
-        if (Flags.enableOutputSwitcherPersonalAudioSharing()) {
-            if (getAudioSharingMaxSinks() <= MAX_BROADCAST_DEVICE_SUPPORTED) {
-                // Trigger DeviceRouteController to stop the broadcast
-                // After deselecting route, only primary device will resume audio
-                mDeviceRouteController.deselectRoute();
-            } else {
-                // Shouldn't be fall into this case
-                // TODO: b/414535608 - Support 3+ devices for PAS
-                Slog.d(TAG, "Unsupported: exceed max number of devices for broadcast");
-            }
-        }
+        // Do nothing since we don't support multiple BT yet.
     }
 
     @Override
@@ -269,19 +252,7 @@ class SystemMediaRoute2Provider extends MediaRoute2Provider {
             String sessionOriginalId,
             String routeOriginalId,
             @RoutingSessionInfo.TransferReason int transferReason) {
-
-        // Stop audio sharing if audio sharing is in progress
-        if (Flags.enableOutputSwitcherPersonalAudioSharing()) {
-            // TODO: b/414535608 - handle PAS with 3+ devices
-            // This will fail when PAS with 3+ devices
-            // Currently deselect route is basically same as stop broadcast
-            mDeviceRouteController.deselectRoute();
-        }
-
-        // TODO: b/414772532 - handle default route when multiple selected routes
-        String selectedDeviceRouteId =
-                mDeviceRouteController.getSelectedRoutes().getFirst().getId();
-
+        String selectedDeviceRouteId = mDeviceRouteController.getSelectedRoute().getId();
         if (TextUtils.equals(routeOriginalId, MediaRoute2Info.ROUTE_ID_DEFAULT)) {
             if (Flags.enableBuiltInSpeakerRouteSuitabilityStatuses()) {
                 // Transfer to the default route (which is the selected route). We replace the id to
@@ -333,7 +304,7 @@ class SystemMediaRoute2Provider extends MediaRoute2Provider {
 
     @Override
     public void setRouteVolume(long requestId, String routeOriginalId, int volume) {
-        if (!mSelectedRouteId.contains(routeOriginalId)) {
+        if (!TextUtils.equals(routeOriginalId, mSelectedRouteId)) {
             return;
         }
         mAudioManager.setStreamVolume(AudioManager.STREAM_MUSIC, volume, 0);
@@ -407,54 +378,20 @@ class SystemMediaRoute2Provider extends MediaRoute2Provider {
                 return null;
             }
 
-            List<MediaRoute2Info> selectedDeviceRoutes = mDeviceRouteController.getSelectedRoutes();
+            MediaRoute2Info selectedDeviceRoute = mDeviceRouteController.getSelectedRoute();
 
             RoutingSessionInfo.Builder builder =
                     new RoutingSessionInfo.Builder(SYSTEM_SESSION_ID, packageName)
                             .setSystemSession(true);
-
-            for (MediaRoute2Info selectedDeviceRoute : selectedDeviceRoutes) {
-                builder.addSelectedRoute(selectedDeviceRoute.getId());
-
-                if (Flags.enableOutputSwitcherPersonalAudioSharing()) {
-                    if (isAudioBroadcasting()) {
-                        // TODO: b/414535608 - Handle 3+ devices for PAS
-                        // Follows the bluetooth quick setting dialog's logic.
-                        // Whenever Le Audio sharing is on, the selected route would become
-                        // deselectable no matter the number of selected route.
-                        builder.addDeselectableRoute(selectedDeviceRoute.getId());
-                    }
-                }
-            }
-
+            builder.addSelectedRoute(selectedDeviceRoute.getId());
             for (MediaRoute2Info route : mBluetoothRouteController.getAllBluetoothRoutes()) {
                 builder.addTransferableRoute(route.getId());
-
-                if (Flags.enableOutputSwitcherPersonalAudioSharing()) {
-                    if (!isAudioBroadcasting() && isRouteSelectable(route, selectedDeviceRoutes)) {
-                        builder.addSelectableRoute(route.getId());
-                    }
-                }
             }
 
             if (Flags.enableAudioPoliciesDeviceAndBluetoothController()) {
                 for (MediaRoute2Info route : mDeviceRouteController.getAvailableRoutes()) {
-
-                    // Only compare the id between targetDevice and selected routes,
-                    // So we don't use list.contains here.
-                    if (selectedDeviceRoutes.stream()
-                            .noneMatch(
-                                    targetDevice ->
-                                            TextUtils.equals(
-                                                    targetDevice.getId(), route.getId()))) {
+                    if (!TextUtils.equals(selectedDeviceRoute.getId(), route.getId())) {
                         builder.addTransferableRoute(route.getId());
-
-                        if (Flags.enableOutputSwitcherPersonalAudioSharing()) {
-                            if (!isAudioBroadcasting()
-                                    && isRouteSelectable(route, selectedDeviceRoutes)) {
-                                builder.addSelectableRoute(route.getId());
-                            }
-                        }
                     }
                 }
             }
@@ -515,9 +452,7 @@ class SystemMediaRoute2Provider extends MediaRoute2Provider {
                 setProviderState(builder.build());
             }
         } else {
-            for (MediaRoute2Info route : mDeviceRouteController.getSelectedRoutes()) {
-                builder.addRoute(route);
-            }
+            builder.addRoute(mDeviceRouteController.getSelectedRoute());
         }
 
         for (MediaRoute2Info route : mBluetoothRouteController.getAllBluetoothRoutes()) {
@@ -546,75 +481,36 @@ class SystemMediaRoute2Provider extends MediaRoute2Provider {
                     SYSTEM_SESSION_ID, "" /* clientPackageName */)
                     .setSystemSession(true);
 
-            List<MediaRoute2Info> selectedDeviceRoutes = mDeviceRouteController.getSelectedRoutes();
-            List<MediaRoute2Info> selectedRoutes = new ArrayList<>(selectedDeviceRoutes);
-            List<MediaRoute2Info> selectedBtRoutes = mBluetoothRouteController.getSelectedRoutes();
+            MediaRoute2Info selectedDeviceRoute = mDeviceRouteController.getSelectedRoute();
+            MediaRoute2Info selectedRoute = selectedDeviceRoute;
+            MediaRoute2Info selectedBtRoute = mBluetoothRouteController.getSelectedRoute();
             List<String> transferableRoutes = new ArrayList<>();
-            List<String> selectableRoutes = new ArrayList<>();
 
-            if (!selectedBtRoutes.isEmpty()) {
-                selectedRoutes.clear();
-                selectedRoutes.addAll(selectedBtRoutes);
-                for (MediaRoute2Info route : selectedDeviceRoutes) {
-                    transferableRoutes.add(route.getId());
-                }
+            if (selectedBtRoute != null) {
+                selectedRoute = selectedBtRoute;
+                transferableRoutes.add(selectedDeviceRoute.getId());
             }
-            mSelectedRouteId.clear();
-            for (MediaRoute2Info route : selectedRoutes) {
-                mSelectedRouteId.add(route.getId());
-
-                // TODO: b/414772532 - verify if this default route is correct
-                mDefaultRoute =
-                        new MediaRoute2Info.Builder(MediaRoute2Info.ROUTE_ID_DEFAULT, route)
-                                .setSystemRoute(true)
-                                .setProviderId(mUniqueId)
-                                .build();
-
-                builder.addSelectedRoute(route.getId());
-
-                if (Flags.enableOutputSwitcherPersonalAudioSharing()) {
-                    if (isAudioBroadcasting()) {
-                        builder.addDeselectableRoute(route.getId());
-                    }
-                }
-            }
-
+            mSelectedRouteId = selectedRoute.getId();
+            mDefaultRoute =
+                    new MediaRoute2Info.Builder(MediaRoute2Info.ROUTE_ID_DEFAULT, selectedRoute)
+                            .setSystemRoute(true)
+                            .setProviderId(mUniqueId)
+                            .build();
+            builder.addSelectedRoute(mSelectedRouteId);
             if (Flags.enableAudioPoliciesDeviceAndBluetoothController()) {
                 for (MediaRoute2Info route : mDeviceRouteController.getAvailableRoutes()) {
                     String routeId = route.getId();
-                    if (!mSelectedRouteId.contains(routeId)) {
+                    if (!mSelectedRouteId.equals(routeId)) {
                         transferableRoutes.add(routeId);
-
-                        if (Flags.enableOutputSwitcherPersonalAudioSharing()) {
-                            if (!isAudioBroadcasting()
-                                    && isRouteSelectable(route, selectedRoutes)) {
-                                // Both selected and current available devices are Le Audio devices
-                                // Make the current available device selectable
-                                selectableRoutes.add(routeId);
-                            }
-                        }
                     }
                 }
             }
-
             for (MediaRoute2Info route : mBluetoothRouteController.getTransferableRoutes()) {
                 transferableRoutes.add(route.getId());
-
-                if (Flags.enableOutputSwitcherPersonalAudioSharing()) {
-                    if (isRouteSelectable(route, selectedRoutes)) {
-                        selectableRoutes.add(route.getId());
-                    }
-                }
             }
 
             for (String route : transferableRoutes) {
                 builder.addTransferableRoute(route);
-            }
-
-            if (Flags.enableOutputSwitcherPersonalAudioSharing()) {
-                for (String route : selectableRoutes) {
-                    builder.addSelectableRoute(route);
-                }
             }
 
             if (Flags.enableBuiltInSpeakerRouteSuitabilityStatuses()) {
@@ -622,9 +518,8 @@ class SystemMediaRoute2Provider extends MediaRoute2Provider {
                 UserHandle transferInitiatorUserHandle = null;
                 String transferInitiatorPackageName = null;
 
-                if (containsSelectedRouteWithId(
-                        oldSessionInfo,
-                        selectedRoutes.stream().map(MediaRoute2Info::getId).toList())) {
+                if (oldSessionInfo != null
+                        && containsSelectedRouteWithId(oldSessionInfo, selectedRoute.getId())) {
                     transferReason = oldSessionInfo.getTransferReason();
                     transferInitiatorUserHandle = oldSessionInfo.getTransferInitiatorUserHandle();
                     transferInitiatorPackageName = oldSessionInfo.getTransferInitiatorPackageName();
@@ -633,11 +528,7 @@ class SystemMediaRoute2Provider extends MediaRoute2Provider {
                 synchronized (mTransferLock) {
                     if (mPendingTransferRequest != null) {
                         boolean isTransferringToTheSelectedRoute =
-                                selectedRoutes.stream()
-                                        .anyMatch(
-                                                route ->
-                                                        mPendingTransferRequest.isTargetRoute(
-                                                                route));
+                                mPendingTransferRequest.isTargetRoute(selectedRoute);
                         boolean canBePotentiallyTransferred =
                                 mPendingTransferRequest.isTargetRouteIdInRouteOriginalIdList(
                                         transferableRoutes);
@@ -711,12 +602,8 @@ class SystemMediaRoute2Provider extends MediaRoute2Provider {
         }
 
         long pendingRequestId = mPendingSessionCreationOrTransferRequest.mRequestId;
-        if (mSelectedRouteId.stream()
-                .anyMatch(
-                        routeId ->
-                                routeId.equals(
-                                        mPendingSessionCreationOrTransferRequest
-                                                .mTargetOriginalRouteId))) {
+        if (mPendingSessionCreationOrTransferRequest.mTargetOriginalRouteId.equals(
+                mSelectedRouteId)) {
             if (DEBUG) {
                 Slog.w(
                         TAG,
@@ -764,17 +651,19 @@ class SystemMediaRoute2Provider extends MediaRoute2Provider {
     }
 
     private boolean containsSelectedRouteWithId(
-            @Nullable RoutingSessionInfo sessionInfo, @NonNull List<String> selectedRouteIds) {
+            @Nullable RoutingSessionInfo sessionInfo, @NonNull String selectedRouteId) {
         if (sessionInfo == null) {
             return false;
         }
 
         List<String> selectedRoutes = sessionInfo.getSelectedRoutes();
 
-        // Since we only support transferring to a single route, checking the first item should be
-        // enough.
-        String oldSelectedRouteId = MediaRouter2Utils.getOriginalId(selectedRoutes.getFirst());
-        return selectedRouteIds.contains(oldSelectedRouteId);
+        if (selectedRoutes.size() != 1) {
+            throw new IllegalStateException("Selected routes list should contain only 1 route id.");
+        }
+
+        String oldSelectedRouteId = MediaRouter2Utils.getOriginalId(selectedRoutes.get(0));
+        return oldSelectedRouteId != null && oldSelectedRouteId.equals(selectedRouteId);
     }
 
     void publishProviderState() {
@@ -826,45 +715,6 @@ class SystemMediaRoute2Provider extends MediaRoute2Provider {
         mDeviceRouteController.updateVolume(volume);
 
         publishProviderState();
-    }
-
-    /**
-     * @return if max number of broadcast devices reached
-     */
-    private boolean maxBroadcastDeviceReached() {
-        return mDeviceRouteController.getSelectedRoutes().size() >= getAudioSharingMaxSinks();
-    }
-
-    /**
-     * @return max number of devices allow for audio sharing broadcast
-     */
-    private int getAudioSharingMaxSinks() {
-        return mContext.getResources().getInteger(R.integer.config_audio_sharing_maximum_sinks);
-    }
-
-    /**
-     * Checks if a given route should be displayed as selectable route. This function checks: 1) if
-     * max devices for broadcast reached 2) the selected route(s) is Le Audio supported route 3) the
-     * target route is a Le Audio supported route
-     *
-     * @param targetRoute the target route for checking
-     * @param selectedRoutes list of currently selected routes
-     * @return true if the target route should be displayed as selectable route
-     */
-    private boolean isRouteSelectable(
-            MediaRoute2Info targetRoute, List<MediaRoute2Info> selectedRoutes) {
-        return !maxBroadcastDeviceReached()
-                && selectedRoutes.getFirst().getType() == MediaRoute2Info.TYPE_BLE_HEADSET
-                && targetRoute.getType() == MediaRoute2Info.TYPE_BLE_HEADSET;
-    }
-
-    /**
-     * Checks if there is existing broadcast
-     *
-     * @return true if there is existing broadcast
-     */
-    private boolean isAudioBroadcasting() {
-        return mDeviceRouteController.getAudioDeviceType() == AudioDeviceInfo.TYPE_BLE_BROADCAST;
     }
 
     private class AudioManagerBroadcastReceiver extends BroadcastReceiver {
